--- a/templates/demolition/index.html.twig
+++ b/templates/demolition/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Démolition et curage{% endblock %}
 
 {% block body %}
+<div class="demoli">
 <h1 class="text-center demo">Démolition et curage</h1>
 
 <section class="demolition-content">
@@ -80,5 +81,5 @@
 </section>
  
 <a href="{{ path('contact') }}" class="btn btn-primary btn-study">DEMANDE D'ÉTUDE</a>
-
+</div>
 {% endblock %}
