--- a/templates/maçonnerie/index.html.twig
+++ b/templates/maçonnerie/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Maçonnerie{% endblock %}
 
 {% block body %}
+<div class="macon">
 <h1 class="text-center maconnerie">Maçonnerie</h1>
 
 <section class="maconnerie-content">
@@ -78,4 +79,5 @@
     </div>
 </section>
  <a href="{{ path('contact') }}" class="btn btn-primary btn-study">DEMANDE D'ÉTUDE</a>
+</div>
 {% endblock %}
