--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -147,8 +147,8 @@
 
     {% block javascripts %}
     <!-- JavaScript inclus avec Webpack Encore -->
-    <script src="{{ asset('build/app.js') }}"></script>
-    <script src="{{ asset('build/script.js') }}"></script>
+    {# <script src="{{ asset('build/app.js') }}"></script>
+    <script src="{{ asset('build/script.js') }}"></script> #}
     <!-- JS Bootstrap -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
