--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -75,7 +75,7 @@
                     <a href="{{ path('chantier_show', {'id': chantier.id}) }}">
                         <img src="{{ asset(chantier.images[0]) }}" alt="{{ chantier.nom }}" class="img-fluid">
                         <div class="hover-overlay">
-                            <span>{{ chantier.nom }}</span>
+                            <span class="pres-nom-chantier">{{ chantier.nom }}</span>
                         </div>
                     </a>
                 </div>
