--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -359,21 +359,32 @@
     {% endfor %}
 {% endfor %}
 
-    <section class="contact-section">
+   <section class="contact-section">
     <div class="contact-container">
         <h2>Contactez nous</h2>
-        <form action="{{ path('send_message') }}" method="post">
-            <label for="name">Nom et prénom :</label>
-            <input type="text" id="name" name="name" required>
-            
-            <label for="email">Adresse e-mail :</label>
-            <input type="email" id="email" name="email" required>
-            
-            <label for="message">Message :</label>
-            <textarea id="message" name="message" rows="4" required></textarea>
-            
-            <button type="submit">Envoyer</button>
-        </form>
+        
+        {{ form_start(form) }}
+            {{ form_row(form.name) }}
+            {{ form_row(form.email) }}
+            {{ form_row(form.message) }}
+            <button type="submit" class="btn btn-primary">Envoyer</button>
+        {{ form_end(form) }}
+    </div>
+</section>
+{% for type, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="alert alert-{{ type }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endfor %}
+    
+<!-- Bannière de consentement aux cookies -->
+<div class="cookie-banner" id="cookieBanner">
+    <p class="cookie-p">Nous utilisons des cookies pour améliorer votre expérience. En continuant à utiliser notre site, vous acceptez notre politique de confidentialité.</p>
+    <div class="button-container">
+        <button id="acceptCookiesBtn">Accepter</button>
+        <button id="refuseCookiesBtn" class="btn-refuser">Refuser</button>
     </div>
 </section>
 <style>
