--- a/templates/admin/show.html.twig
+++ b/templates/admin/show.html.twig
@@ -27,6 +27,13 @@
                 <div class="col-md-6">
                     <div class="card shadow-sm p-3 ajout">
                         <h3 class="titres">Ajouter une nouvelle facture</h3>
+                         {% for type, messages in app.flashes %}
+    {% for message in messages %}
+        <div class="alert alert-{{ type }}">
+            {{ message }}
+        </div>
+    {% endfor %}
+{% endfor %}
                         {{ form_start(form_facture) }}
                             <div class="mb-3">
                                 {{ form_row(form_facture.numero) }}
@@ -54,6 +61,13 @@
                 <div class="col-md-6">
                     <div class="card shadow-sm p-3 ajout">
                         <h3 class="titres dev">Ajouter un nouveau devis</h3>
+                         {% for type, messages in app.flashes %}
+    {% for message in messages %}
+        <div class="alert alert-{{ type }}">
+            {{ message }}
+        </div>
+    {% endfor %}
+{% endfor %}
                         {{ form_start(form_devis) }}
                             <div class="mb-3">
                                 {{ form_row(form_devis.numero) }}
